--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,10 +3,10 @@
 # @Last Modified by:   Your name
 # @Last Modified time: 2023-02-22 13:27:45
 # pre_prints:
-#   - title: "Variational Curriculum Reinforcement Learning for Unsupervised Discovery of Skills"
+#   - title: "Refining Diffusion Planner with Restoration Gap Guidance"
 #     authors:
-#       - Seongun Kim*
 #       - Kyowoon Lee*
+#       - Seongun Kim*
 #       - Jaesik Choi
 #     venue: Preprint 2023
 #     page_url: # /projects/embodied_pose/
@@ -15,6 +15,16 @@
 #     image: projects/vcrl/fig.png
 
 publications:
+  - title: "Variational Curriculum Reinforcement Learning for Unsupervised Discovery of Skills"
+    authors:
+      - Seongun Kim*
+      - Kyowoon Lee*
+      - Jaesik Choi
+    venue: ICML 2023
+    # page_url: # /projects/embodied_pose/
+    paper_url: http://sailab.kaist.ac.kr/paper-a-paper-is-accepted-at-icml-23/
+    # github_url: https://github.com/leekwoon/hrl-nav
+    image: projects/vcrl/fig.png
   - title: "Adaptive and Explainable Deployment of Navigation Skills via Hierarchical Deep Reinforcement Learning"
     authors:
       - Kyowoon Lee*
