--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,7 +24,8 @@ publications:
     # page_url: # /projects/embodied_pose/
     paper_url: https://openreview.net/pdf?id=U4r9JNyNZ7
     github_url: https://github.com/seongun-kim/vcrl
-    image: projects/vcrl/fig.png
+    project_url: https://leekwoon.github.io/projects/vcrl
+    image: projects/vcrl/thumbnail.png
   - title: "Adaptive and Explainable Deployment of Navigation Skills via Hierarchical Deep Reinforcement Learning"
     authors:
       - Kyowoon Lee*
